<resources>
    <string name="app_name">Medkit2006</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MF_name">Medical Facility Name</string>
    <string name="MF_image">Medical Facility Image</string>
    <string name="MF_type">Type</string>
    <string name="MF_rating">Rating</string>
    <string name="MF_address">Address</string>
    <string name="MF_contact">Contact</string>
    <string name="MF_services">Service</string>
    <string name="near_by_search_btn">Search Nearby</string>
    <string name="search_hist_txt">Search History</string>
    <string name="search_hint">Enter search here</string>
    <string name="search_ord_hint">Sort by </string>
    <string name="search_opt1">Alphabet</string>
    <string name="search_opt2">Type</string>
    <string name="search_opt3">Rating</string>
    <string name="no_result_warning">Search NO result!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="action_settings">Setting</string>
    <string name="type_a_message_here">Type a message here</string>
    <string name="username">Username</string>
    <string name="error_in_sending_message">Error in sending message.</string>
    <string name="btn_accounts">Account</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_chat">Chat</string>
    <string name="btn_forum">Forum</string>
    <string name="btn_bookmark">Bookmark</string>
    <string name="btn_login">Login</string>
    <string name="send_message">Send message</string>
    <string name="MF_mgr_tag">MF_Mgr Queries</string>
    <string name="Post_forum_hint1">Posted By  </string>
    <string name="comment_break">\n</string>
    <string-array name="gender_array">
        <item />
        <item>M</item>
        <item>F</item>
        <item>O</item>
    </string-array>
    <string-array name="blood_type_array">
        <item />
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

</resources>