<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    >
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></androidx.recyclerview.widget.RecyclerView>
    
    <TextView
        android:id="@+id/txtMedicalFacilityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/MF_name"
        android:textColor="#25232B"
        android:textSize="40sp"
        android:textStyle="bold"
        android:padding="10sp"
        />

    <TextView
        android:id="@+id/txtMedicalFacilityType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMedicalFacilityName"
        android:layout_toStartOf="@+id/mfRatingLabel"
        android:background="@drawable/rounded_corner_view"
        android:padding="5sp"
        android:text="@string/MF_type"
        android:textColor="#263238"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/mfRatingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMedicalFacilityName"
        android:layout_centerHorizontal="true"
        android:labelFor="@id/txtMedicalFacilityRating"
        android:text="Rating: "
        android:textSize="30sp"
        android:textColor="#263238"
        android:layout_marginLeft="15dp"
        android:background="@drawable/rounded_corner_view"
        android:padding="5sp"
        />

    <TextView
        android:id="@+id/txtMedicalFacilityRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMedicalFacilityName"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/mfRatingLabel"
        android:text="@string/MF_rating"
        android:textSize="30sp"
        android:textColor="#263238"
        android:layout_marginLeft="5dp"
        android:background="@drawable/rounded_corner_view"
        android:padding="5sp"
        />
    <TextView
        android:id="@+id/txtMedicalFacilityAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MF_address"
        android:layout_below="@id/txtMedicalFacilityName"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:textColor="#263238"
        android:layout_marginTop="60dp"
        android:padding="20sp"
        />

    <TextView
        android:id="@+id/txtMedicalFacilityContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MF_contact"
        android:layout_below="@id/txtMedicalFacilityAddress"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#263238"
        android:layout_marginTop="15sp"
        />

    <TextView
        android:id="@+id/txtMedicalFacilityServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MF_services"
        android:layout_below="@id/txtMedicalFacilityContact"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#263238"
        android:layout_marginTop="15sp"
        />

    <Button
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onClickTest"
        android:text="Test" />
    <TextView
        android:id="@+id/testResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TestResult"
        android:layout_toRightOf="@id/testButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        />

</RelativeLayout>